--- a/src/main/webapp/signin.xhtml
+++ b/src/main/webapp/signin.xhtml
@@ -45,7 +45,7 @@
 							<h:message for="password" styleClass="error" />
 						</p>
 
-						<h:commandButton value="Login" action="#{loginController.login}">
+						<h:commandButton value="Login" action="#{loginController.login()}">
 						</h:commandButton>
 
 						<h:messages id="messages" globalOnly="true" />
