--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -60,10 +60,6 @@
 								styleClass="btn btn-primary" action="report.xhtml"
 								style="background-color: var(--primary-color); border-color: var(--primary-color); color: white;" />
 
-							<h:outputLabel for="statusFilter" value="Status:" />
-							<p:inputText id="statusFilter" placeholder="Filter nach Status"
-								p:keyup="@this" update="ghostnetsDataTable" />
-
 							<p:commandButton icon="fa-solid fa-earth-americas"
 								title="Karte anzeigen"
 								onclick="PF('dlg').show(); loadGhostNetMarkers();"
@@ -104,7 +100,8 @@
 								<f:convertDateTime type="date" dateStyle="medium" />
 							</h:outputText>
 						</p:column>
-						<p:column rendered="#{loginController.loggedInUser != null}" headerText="Bergende Person">
+						<p:column rendered="#{loginController.loggedInUser != null}"
+							headerText="Bergende Person">
 							<p:commandLink update=":form:userDetail"
 								oncomplete="PF('userDialog').show();"
 								value="#{ghostnet.savingPerson.surname} #{ghostnet.savingPerson.name}">
